[tool.poetry]
name = "inventory-control"
version = "0.1.0"
description = ""
authors = ["BitCoders"]
packages = [
    {include = "src"},
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
redis = "^5.0.8"
loki-logger-handler = "^0.1.4"
requests = "^2.32.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
poetry-dotenv-plugin = "^0.2.0"
isort = "^5.13.2"

[tool.poetry.scripts]
app = "src.__main__:main"
jwt_key_generator = "src.auth.scripts.jwt_key_generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
